--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <style>
       @font-face {
-        src: url("./font.ttf");
+        src: url("https://neostudio.oss-accelerate.aliyuncs.com/melody_project/font.ttf");
         font-family: "neo-font";
       }
     </style>
