--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <style>
       @font-face {
-        src: url("https://neostudio.oss-accelerate.aliyuncs.com/melody_project/font.ttf");
-        font-family: "neo-font";
+        src: url("./nnneo.ttf");
+        font-family: "neo";
       }
     </style>
     <!--
